log
Wed 15 May 2024 10:41:23 PM UTC: 
 tests:  0|5
total_score: 0/70
15c19b0
Wed 15 May 2024 10:46:03 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:25: error: implicit declaration of function ‘addToList’ [-Werror=implicit-function-declaration]
   61 |                         addToList(list, newNode);
      |                         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8e596d5
